fix: tighten bullet point spacing in alerts (v1.0.11)

--- a/style/base.css
+++ b/style/base.css
@@ -18,6 +18,33 @@
   margin-bottom: 0;
 }
 
+/* Tighten paragraph spacing inside alerts */
+.markdown-alert p {
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+}
+
+/* Tighten list spacing inside alerts */
+.markdown-alert ul,
+.markdown-alert ol {
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  padding-left: 1.5em;
+}
+
+.markdown-alert li {
+  margin-top: 0.25em;
+  margin-bottom: 0.25em;
+}
+
+.markdown-alert li:first-child {
+  margin-top: 0;
+}
+
+.markdown-alert li:last-child {
+  margin-bottom: 0;
+}
+
 .markdown-alert .markdown-alert-title {
   display: flex;
   font-weight: 500;
